--- a/app/src/main/res/layout/view_goods_spec.xml
+++ b/app/src/main/res/layout/view_goods_spec.xml
@@ -36,7 +36,7 @@
             style="@style/text_16_black"
             android:layout_marginLeft="@dimen/dp_95"
             android:layout_marginTop="@dimen/dp_32"
-            android:text="商品名称名称名称名称"
+            android:text="商品名称"
             />
 
         <TextView
@@ -45,7 +45,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/dp_2"
             android:layout_marginLeft="@dimen/dp_95"
-            android:text="库存：5"
+            android:text="库存：0"
             />
 
         <ImageView
@@ -72,14 +72,14 @@
         <TextView
             android:id="@+id/view_select_spec"
             style="@style/text_14_red"
+            android:textColor="@color/main_light_red"
             android:layout_marginTop="@dimen/dp_12"
-            android:text="已选：规格1.1+规格2.2+标签1.2,标签1.3"/>
+            android:text="已选："/>
 
         <TextView
             android:id="@+id/view_discount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_10"
             android:background="@drawable/border_rect_light_blue"
             android:paddingBottom="@dimen/dp_1"
@@ -89,7 +89,12 @@
             android:text="限制 5.72折"
             android:textColor="@color/main_light_blue"
             android:textSize="@dimen/dp_10"
+            android:visibility="gone"
             />
+
+        <Space
+            android:layout_width="1px"
+            android:layout_height="@dimen/dp_15"/>
 
         <include layout="@layout/view_split_bar_light"/>
     </LinearLayout>
@@ -115,7 +120,7 @@
         <TextView
             android:id="@+id/view_price"
             style="@style/text_18_black"
-            android:text="￥99.99"
+            android:text="￥0"
             />
 
         <include layout="@layout/space_h"/>
@@ -124,6 +129,7 @@
             android:id="@+id/view_plus_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             />
 
     </LinearLayout>
